
    What is going on?!

    Was a desync in the packet header. Fixed.

    Fixed how fragment header is parsed, and it now saves off the packet type in a struct var,
    so I can get the sequence # and crc32 out of the pre-parsed fragment packet for regular packets, 
    because I need to know which sequence number to store those packets as.


Wednesday December 23rd, 2015
=============================

    At this point it's starting to feel that integrating support for fragments into the protocol2.h is worth considering

    Here are the pros of that:

        1. It's done once and it works for all other articles past this
        2. It's reusable and exists for other examples without extra work
        3. There is very little overhead with the approach of reserving packet type 0 for fragments
        4. It's really annoying mirroring the packet read/write functions specially to handle fragments, it's also error prone

    Cons:

        1. It significantly complicates protocol2.h
        2. It turns protocol2.h from a stateless header into something that maintains a data structure
        3. The data structure has a lot of assumptions built in, like maximum number of fragments per-packet, max fragment size and so on.
        4. Baggage to support fragmentation and re-assembly is carried across to other articles that don't need it
        5. Now there are multiple versions of protocol2.h for each article *or* the protocol2.h gets really bulky, eg. lots of extra stuff
        6. I'm not really making middleware here, but a bunch of articles showing how stuff is done. It's good for each article to basically
           be self-contained. If somebody really wants the middleware for protocol2.h to be integrated together into a product they can
           pay me to do that for them.
        7. If I make this decision now, suddenly other things specific to articles will also get carried across to protocol2.h past this point